# agent/agentUi/src/api/models/NamespaceSelection.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * agent/agentGrpc/agent.proto
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: version not set
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface NamespaceSelection
+ */
+export interface NamespaceSelection {
+    /**
+     * 
+     * @type {string}
+     * @memberof NamespaceSelection
+     */
+    namespaceToken?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof NamespaceSelection
+     */
+    name?: string;
+}
+
+/**
+ * Check if a given object implements the NamespaceSelection interface.
+ */
+export function instanceOfNamespaceSelection(value: object): value is NamespaceSelection {
+    return true;
+}
+
+export function NamespaceSelectionFromJSON(json: any): NamespaceSelection {
+    return NamespaceSelectionFromJSONTyped(json, false);
+}
+
+export function NamespaceSelectionFromJSONTyped(json: any, ignoreDiscriminator: boolean): NamespaceSelection {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'namespaceToken': json['namespaceToken'] == null ? undefined : json['namespaceToken'],
+        'name': json['name'] == null ? undefined : json['name'],
+    };
+}
+
+export function NamespaceSelectionToJSON(json: any): NamespaceSelection {
+    return NamespaceSelectionToJSONTyped(json, false);
+}
+
+export function NamespaceSelectionToJSONTyped(value?: NamespaceSelection | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'namespaceToken': value['namespaceToken'],
+        'name': value['name'],
+    };
+}
+
