# agent/agentUi/src/api/models/ShareReservedResponse.ts
@@ -1,97 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * agent/agentGrpc/agent.proto
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: version not set
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface ShareReservedResponse
- */
-export interface ShareReservedResponse {
-    /**
-     * 
-     * @type {string}
-     * @memberof ShareReservedResponse
-     */
-    token?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ShareReservedResponse
-     */
-    backendMode?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ShareReservedResponse
-     */
-    shareMode?: string;
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof ShareReservedResponse
-     */
-    frontendEndpoints?: Array<string>;
-    /**
-     * 
-     * @type {string}
-     * @memberof ShareReservedResponse
-     */
-    target?: string;
-}
-
-/**
- * Check if a given object implements the ShareReservedResponse interface.
- */
-export function instanceOfShareReservedResponse(value: object): value is ShareReservedResponse {
-    return true;
-}
-
-export function ShareReservedResponseFromJSON(json: any): ShareReservedResponse {
-    return ShareReservedResponseFromJSONTyped(json, false);
-}
-
-export function ShareReservedResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ShareReservedResponse {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'token': json['token'] == null ? undefined : json['token'],
-        'backendMode': json['backendMode'] == null ? undefined : json['backendMode'],
-        'shareMode': json['shareMode'] == null ? undefined : json['shareMode'],
-        'frontendEndpoints': json['frontendEndpoints'] == null ? undefined : json['frontendEndpoints'],
-        'target': json['target'] == null ? undefined : json['target'],
-    };
-}
-
-export function ShareReservedResponseToJSON(json: any): ShareReservedResponse {
-    return ShareReservedResponseToJSONTyped(json, false);
-}
-
-export function ShareReservedResponseToJSONTyped(value?: ShareReservedResponse | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'token': value['token'],
-        'backendMode': value['backendMode'],
-        'shareMode': value['shareMode'],
-        'frontendEndpoints': value['frontendEndpoints'],
-        'target': value['target'],
-    };
-}
-
