# agent/agentUi/src/api/models/index.ts
@@ -3,11 +3,11 @@
 export * from './AccessDetail';
 export * from './AccessPrivateResponse';
 export * from './GooglerpcStatus';
+export * from './NamespaceSelection';
 export * from './ProtobufAny';
 export * from './ShareDetail';
 export * from './ShareHttpHealthcheckResponse';
 export * from './SharePrivateResponse';
 export * from './SharePublicResponse';
-export * from './ShareReservedResponse';
 export * from './StatusResponse';
 export * from './VersionResponse';
